# zai-agent-browser

./: .env.example  .gitignore  LICENSE  README.md  browser_agent.py  custom_actions.py  pyproject.toml  requirements.txt  review_report.md  setup.md
tests/: test_browser_agent.py  test_custom_actions.py
